@@ -1,3 +1,6 @@
+next:
+* Add command to reload configuration files in running session
+
 0.5:
 * save command prompt, recipient and sender history across program restarts
 * new config option: "handle_mouse" to enable interpretation of mouse events
